# bits

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
example/: CMakeLists.txt  copy_the_noncopyable.cpp  float_to_int.cpp  hack_bool.cpp  hack_private.cpp  modify_reference.cpp
include/: bits.hpp
test/: CMakeLists.txt  basic.cpp  main.cpp  operators.cpp  slice.cpp  test_tools.hpp  test_types.hpp
